# chatroom_socket

./: .env  app.py  pyproject.toml
controller/: accounts.py
core/: Database.py  Enum.py
model/: accounts.py  message.py  participants.py  rooms.py
serializer/: accounts.py
service/: accounts.py  message.py  participants.py  rooms.py
static/css/: home.css  register.css  style.css
templates/: home.html  login.html  register.html
